--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ beautifulsoup4==4.12.0
 langchain==0.1.0
 langchain-community==0.0.10
 sentence-transformers==2.2.2
-faiss-cpu==1.7.4
+faiss-cpu-no-avx2==1.7.4
 duckduckgo-search==3.9.4
 pydantic>=2.6.0
