--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,8 @@ huggingface_hub==0.19.0
 python-dotenv==1.0.0
 requests==2.31.0
 beautifulsoup4==4.12.0
-langchain==0.1.0
-langchain-community==0.0.10
 sentence-transformers==2.2.2
-faiss-cpu-no-avx2==1.7.4
 duckduckgo-search==3.9.4
-pydantic>=2.6.0
+pydantic==2.5.0
+numpy==1.26.4
+annoy==1.17.3
