--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit==1.28.0
-huggingface_hub==0.19.0
-python-dotenv==1.0.0
-requests==2.31.0
-beautifulsoup4==4.12.0
-sentence-transformers==2.2.2
-duckduckgo-search==3.9.4
-numpy==1.26.4
+streamlit==1.37.1
+python-dotenv==1.0.1
+huggingface_hub==0.33.0
+duckduckgo-search==6.2.10
+beautifulsoup4==4.12.3
+requests==2.32.3
+sentence-transformers==3.0.1
 annoy==1.17.3
-ddgs==1.0.7
+geopy==2.4.1
+fpdf==1.7.2
